@@ -1965,3 +1965,5 @@ direction otherwise using -f? option.
 Changed order of oconv arguments in rfluxmtx so user can specify input
 octree using -i option at the end instead of (or in addition to) a
 list of scene files.
+
+Added support for argument expansion to rfluxmtx.
